# cmakefmt

./: .bumpversion.toml  .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  REUSE.toml  SECURITY.md  build.rs  deny.toml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  codeql.yml  codspeed.yml  coverage.yml  cross-platform.yml  docker.yml  docs.yml  fuzz.yml  pages.yml  prepare-release.yml  publish-winget.yml  python.yml  real-world.yml  release.yml  scorecard.yml
LICENSES/: LLVM-exception.txt
benches/: README.md  fetch-repos.sh  formatter.rs  run-all-benchmarks.sh  run-cmakefmt-only.sh  version-trend-datapoint.sh
demo/: cmakefmt.tape
docs/: .gitignore  ARCHITECTURE.md  PERFORMANCE.md  README.md  RELEASING.md  ROADMAP.md  astro.config.mjs  book.toml  cmake-grammar.md  package-lock.json  package.json  starwind.config.json  tsconfig.json
docs/public/: robots.txt
docs/public/schemas/latest/: schema.json  schema.json.license
docs/public/schemas/v0.4.0/: schema.json
docs/public/schemas/v0.7.0/: schema.json
docs/public/schemas/v1.0.0/: schema.json
docs/public/schemas/v1.3.0/: schema.json
docs/public/schemas/v1.6.0/: schema.json
docs/src/: README.md  SUMMARY.md  api.md  architecture.md  behavior.md  changelog.md  cli.md  config.md  content.config.ts  coverage.md  install.md  migration.md  performance.md  release.md  troubleshooting.md
docs/src/components/: BeforeAfterAnim.astro  BenchmarkComparisonChart.astro  DotGrid.astro  FeatureShowcase.astro  Footer.astro  FormatMagicShowcase.astro  Header.astro  HeroReveal.astro  InstallCmd.astro  MobileTableOfContents.astro  ParallelismChart.astro  Playground.astro  ScrollReveal.astro  Sidebar.astro  SpeedCounter.astro  SpeedupChart.astro  ThemeProvider.astro  ThemeToggle.astro  VersionTrendChart.astro  WhyCmakefmt.astro  siteNav.ts
docs/src/content/docs/: api.md  architecture.md  badge.md  behavior.md  changelog.md  ci.md  cli.md  comparison.md  config.md  contributing.md  cookbook.md  coverage.md  editors.md  faq.md  getting-started.md  glossary.md  index.mdx  install.md  installation.md  migration.md  one-oh-checklist.md  performance.md  performance.mdx  playground.mdx  python.md  release.md  stability.md  troubleshooting.md  users.md  wasm-api.md
docs/src/styles/: custom.css  starwind.css
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/compare/: cmake_legacy.pest  legacy_pest.rs
fuzz/corpus/format_roundtrip/: seed_simple
fuzz/fuzz_targets/: format_roundtrip.rs  fuzz_format.rs  fuzz_parse.rs  fuzz_parse_compare.rs  parse.rs
packaging/conda-forge/: README.md  build.sh
packaging/homebrew/: README.md  cmakefmt.rb.in
packaging/nix/: README.md  cmakefmt.nix
packaging/scoop/: README.md  cmakefmt.json
packaging/winget/: README.md  cmakefmt.cmakefmt.installer.yaml  cmakefmt.cmakefmt.locale.en-US.yaml  cmakefmt.cmakefmt.yaml
python/cmakefmt/: __init__.py
scripts/: build-wasm.sh  check-docs.sh  fetch-real-world-corpus.py  generate-site-metadata.py  render-homebrew-formula.sh  review-real-world-corpus.sh  stamp-changelog.py  sync-changelog.py
site/: README.md  book.toml
site/src/: README.md  SUMMARY.md  api.md  architecture.md  behavior.md  changelog.md  cli.md  config.md  coverage.md  install.md  migration.md  performance.md  release.md  troubleshooting.md
src/: README.md  dump.rs  error.rs  files.rs  lib.rs  main.rs  python.rs  semantic.rs  wasm.rs
src/cli/: commands.rs  diff.rs  errors.rs  mod.rs  process.rs  report.rs  runtime.rs
src/config/: editorconfig.rs  file.rs  legacy.rs  mod.rs
src/formatter/: comment.rs  mod.rs  node.rs
src/lsp/: mod.rs
src/parser/: ast.rs  cmake.pest  mod.rs  scanner.rs
src/spec/: builtins.toml  builtins.yaml  mod.rs  modules.yaml  registry.rs
tests/: README.md  cli.rs  idempotency.rs  parser_compare.rs  parser_fixtures.rs  property.rs  real_world.rs  snapshots.rs
tests/compare/: cmake_legacy.pest  legacy_pest.rs
tests/fixtures/: README.md
tests/fixtures/basic/: simple.cmake  wraps.cmake
tests/fixtures/comments/: comment_positions.cmake
tests/fixtures/edge_cases/: brackets.cmake
tests/fixtures/real_world/: SOURCES.md  manifest.toml  monorepo_root.cmake
tests/fixtures/real_world/abseil/: CMakeLists.txt
tests/fixtures/real_world/catch2/: CMakeLists.txt
tests/fixtures/real_world/cli11/: CMakeLists.txt
tests/fixtures/real_world/protobuf/: CMakeLists.txt
tests/fixtures/real_world/qtbase_network/: CMakeLists.txt
tests/python/: conftest.py  test_check.py  test_default_config.py  test_edge_cases.py  test_errors.py  test_format_source.py  test_module.py
tests/snapshots/: README.md  real_world__abseil__CMakeLists_txt.snap  real_world__catch2__CMakeLists_txt.snap  real_world__cli11__CMakeLists_txt.snap  real_world__cmake_cmbzip2__CMakeLists_txt.snap  real_world__googletest__CMakeLists_txt.snap  real_world__llvm_tablegen__CMakeLists_txt.snap  real_world__nlohmann_json__CMakeLists_txt.snap  real_world__opencv_flann__CMakeLists_txt.snap  real_world__protobuf__CMakeLists_txt.snap  real_world__qtbase_network__CMakeLists_txt.snap
