[package]
name = "cmakefmt"
version = "0.1.0"
edition = "2021"
description = "A fast, correct CMake formatter"
license = "MIT"

[[bin]]
name = "cmakefmt"
path = "src/main.rs"

[lib]
name = "cmakefmt"
path = "src/lib.rs"

[dependencies]
pest = "2"
pest_derive = "2"
pretty = "0.12"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1.2"
thiserror = "2.0.18"
indexmap = { version = "2", features = ["serde"] }
walkdir = "2"
regex = "1"
rayon = "1"
indicatif = "0.18"

[dev-dependencies]
insta = "1"
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "formatter"
harness = false
