[package]
name = "cmakefmt"
version = "0.1.0"
edition = "2021"
description = "A fast, correct CMake formatter"
license = "MIT OR Apache-2.0"
repository = "https://github.com/puneetmatharu/cmakefmt"
homepage = "https://github.com/puneetmatharu/cmakefmt"
documentation = "https://puneetmatharu.github.io/cmakefmt/"
readme = "README.md"
keywords = ["cmake", "formatter", "formatting", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"
include = [
  "/build.rs",
  "/Cargo.toml",
  "/LICENSE",
  "/LICENSES/Apache-2.0.txt",
  "/LICENSES/MIT.txt",
  "/README.md",
  "/src/**",
]

[[bin]]
name = "cmakefmt"
path = "src/main.rs"

[lib]
name = "cmakefmt"
path = "src/lib.rs"

[dependencies]
pest = "2"
pest_derive = "2"
pretty = "0.12"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1.2"
thiserror = "2.0.18"
indexmap = { version = "2", features = ["serde"] }
walkdir = "2"
regex = "1"
rayon = "1"
indicatif = "0.18"
ignore = "0.4"
similar = "2"

[dev-dependencies]
insta = "1"
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "formatter"
harness = false
