# SPDX-FileCopyrightText: Copyright 2026 Puneet Matharu
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "cmakefmt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pest = "2"
pest_derive = "2"

[dependencies.cmakefmt]
path = ".."
package = "cmakefmt-rust"

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
doc = false

[[bin]]
name = "fuzz_format"
path = "fuzz_targets/fuzz_format.rs"
doc = false

[[bin]]
name = "fuzz_parse_compare"
path = "fuzz_targets/fuzz_parse_compare.rs"
doc = false
